Remove configuration code that is overridden before used